[Niraj]Refracted:Scala codes to accomodate changes using flash scope

--- a/PlayFrameworkPractice/app/views/task1.scala.html
+++ b/PlayFrameworkPractice/app/views/task1.scala.html
@@ -1,12 +1,23 @@
-@(tasks:Seq[String])
+@(tasks:Seq[String])(implicit request:RequestHeader, flash:Flash)
 
 @main("Tasks List") {
  <h2>Tasks List</h2>
  <ul>
-  @for(task <- tasks){
+  @for((task,i) <- tasks.zipWithIndex){
     <li>@task</li>
+    <form method="post" action="@routes.TaskList1.deleteTask">
+     @helper.CSRF.formField
+     <input type="hidden" name="index" value="@i"/>
+     <input type="submit" value="Delete"/>
+
+    </form>
   }
  </ul>
+ <form method="post" action="@routes.TaskList1.addTask()">
+  @helper.CSRF.formField
+  <input type = "text" name = "newTask"/>
+  <input type = "submit"/>
+ </form>
  <div>
   <a href="@routes.TaskList1.logout">Logout</a>
  </div>
