--- a/PlayFrameworkPractice/app/views/login1.scala.html
+++ b/PlayFrameworkPractice/app/views/login1.scala.html
@@ -1,9 +1,9 @@
 @* login1 Template File *@
-@()(implicit request:RequestHeader)
+@()(implicit request:RequestHeader,flash:Flash)
 
 @main("Login") {
     <h2>Login</h2>
-    <form method="get" action="validateLoginGet">
+    <form method="get" action="validateGet">
         username:<input type="text" name="username"/>
         password:<input type="password" name="password"/>
         <input type="submit"/>
