--- a/PlayFrameworkPractice/app/views/main.scala.html
+++ b/PlayFrameworkPractice/app/views/main.scala.html
@@ -4,7 +4,7 @@
  * two arguments, a `String` for the title of the page and an `Html`
  * object to insert into the body of the page.
  *@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit flash:Flash)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -19,6 +19,8 @@
         @* And here's where we render the `Html` object containing
          * the page content. *@
         @content
+        @flash.get("error")
+        @flash.get("success")
 
       <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
